--- a/QR code component/style.css
+++ b/QR code component/style.css
@@ -4,6 +4,9 @@
 --Slate500: hsl(216, 15%, 48%);
 --Slate900: hsl(218, 44%, 22%);
 }
+* {
+    box-sizing: border-box;
+}
 html,body {
     font-family: "Outfit", sans-serif;
     font-size: 62.5%;
@@ -28,7 +31,7 @@ body {
 .card {
     background-color: white;
     width: 320px;
-    height: 465px;
+    height: 499px;
     display: flex;
     flex-direction: column;
     align-items: center;
