--- a/Blog preview card/style.css
+++ b/Blog preview card/style.css
@@ -91,6 +91,9 @@ body {
 .text h3 {
     color: var(--gray-950);
 }
+.text h3:hover {
+    color: var(--yellow);
+}
 .text p:nth-of-type(2) {
     color: var(--gray-500);
 }
