--- a/Recipe page/style.css
+++ b/Recipe page/style.css
@@ -38,6 +38,10 @@ body {
     width: 100%;
     height: 100%;
 }
+hr {
+    width: 100%;
+    border-top: 1px solid var(--white--coffee);
+}
 .card {
     display: flex;
     flex-direction: column;
@@ -60,13 +64,13 @@ body {
     display: flex;
     flex-direction: column;
     align-items: start;
+    gap: 32px;
 }
 .head {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     gap: 24px;
-    margin-bottom: 32px;
 }
 .head h3 {
     color: var(--dark--charcoal);
@@ -96,7 +100,10 @@ body {
     font-family: "outfit";
 }
 .Preparation ul {
+    display: flex;
+    flex-direction: column;
     list-style: none;
+    gap: 8px;
 }
 .Preparation ul li {
     position: relative;
@@ -104,12 +111,10 @@ body {
     font-size: var(--body--regular);
     font-family: "outfit";
     font-weight: 400;
-    margin-left: 32px;
+    padding-left: 32px;
 }
 .Preparation ul li span {
     font-weight: 700;
-
-
 }
 .Preparation ul li::before {
     content: "";
@@ -118,7 +123,88 @@ body {
     height: 4px;
     border-radius: 50%;
     background-color: var(--dark--raspberry);
-    left: -32px;
+    left: 0px;
     top: 50%;
     transform: translateY(-50%);
+}
+.Ingredients {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 24px;
+    width: 100%;
+}
+.Ingredients h3 {
+    color: var(--brandy--red);
+    font-size: var(--heading--m);
+    font-family: "Young Serif";
+    font-weight: 400;
+}
+.Ingredients ul {
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+    gap: 8px;
+}
+.Ingredients ul li {
+    position: relative;
+    color: var(--wenge--brown);
+    font-size: var(--body--regular);
+    font-family: "outfit";
+    font-weight: 400;
+    padding-left: 32px;
+}
+.Ingredients ul li span {
+    font-weight: 700;
+}
+.Ingredients ul li::before {
+    content: "";
+    position: absolute;
+    width: 4px;
+    height: 4px;
+    border-radius: 50%;
+    background-color: var(--dark--raspberry);
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+}
+.Instructions {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 24px;
+    width: 100%;
+}
+.Instructions h3 {
+    color: var(--brandy--red);
+    font-size: var(--heading--m);
+    font-family: "Young Serif";
+    font-weight: 400;
+}
+.Instructions ul {
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+    gap: 8px;
+    counter-reset: Instructions;
+}
+.Instructions ul li {
+    position: relative;
+    color: var(--wenge--brown);
+    font-size: var(--body--regular);
+    font-family: "outfit";
+    font-weight: 400;
+    padding-left: 32px;
+}
+.Instructions ul li span {
+    font-weight: 700;
+}
+.Instructions ul li::before {
+    position: absolute;
+    content: counter(Instructions)".";
+    counter-increment: Instructions;
+    left: 0px;
+    color: var(--brandy--red);
+    font-size: var(--body--bold);
+    font-weight: 700;
 }
